--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     },
     "dependencies": {
         "@tailwindcss/postcss": "^4.1.18",
+        "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.18",
+        "@tiptap/extension-image": "^3.15.3",
+        "@tiptap/react": "^3.15.3",
+        "@tiptap/starter-kit": "^3.15.3",
+        "@types/qs": "^6.14.0",
         "axios": "^1.13.2",
         "dayjs": "^1.11.19",
         "postcss": "^8.5.6",
+        "qs": "^6.14.1",
         "react": "^19.2.0",
         "react-daum-postcode": "^3.2.0",
         "react-dom": "^19.2.0",
