--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tiptap/extension-image": "^3.15.3",
         "@tiptap/react": "^3.15.3",
         "@tiptap/starter-kit": "^3.15.3",
+        "@tosspayments/payment-widget-sdk": "^0.12.1",
         "@types/qs": "^6.14.0",
         "axios": "^1.13.2",
         "dayjs": "^1.11.19",
